added:view per transaction
