# storage/api-docs/api-docs.json
@@ -325,17 +325,6 @@
                                         "description": "Status of the consultation",
                                         "type": "string",
                                         "example": "Done"
-                                    },
-                                    "amount": {
-                                        "description": "Amount for the consultation (auto-set if status is Done)",
-                                        "type": "number",
-                                        "format": "float",
-                                        "example": 500
-                                    },
-                                    "remarks": {
-                                        "description": "Additional notes or remarks",
-                                        "type": "string",
-                                        "example": "Patient referred for medication"
                                     }
                                 },
                                 "type": "object"
@@ -788,43 +777,37 @@
                 }
             }
         },
-        "/api/laboratory/update/{id}": {
+        "/status": {
             "post": {
                 "tags": [
                     "Laboratory"
                 ],
-                "summary": "Update status of laboratories under a transaction",
-                "description": "Updates the status (Pending, Done, Returned) of all laboratories associated with a given transaction.\n *                  If status is 'Returned', the linked consultation will also be updated to Returned.",
-                "operationId": "3730a9aee90945f1c361d0792f8df102",
-                "parameters": [
-                    {
-                        "name": "transactionId",
-                        "in": "path",
-                        "description": "ID of the transaction",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "example": 101
-                        }
-                    }
-                ],
+                "summary": "Update Laboratory Status",
+                "description": "This endpoint updates the status of a laboratory record linked to a consultation based on the given transaction ID.",
+                "operationId": "updateLaboratoryStatus",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "status"
+                                    "status",
+                                    "transaction_id"
                                 ],
                                 "properties": {
                                     "status": {
+                                        "description": "Status of the laboratory",
                                         "type": "string",
                                         "enum": [
                                             "Done",
-                                            "Returned",
-                                            "Pending"
+                                            "Returned"
                                         ],
                                         "example": "Returned"
+                                    },
+                                    "transaction_id": {
+                                        "description": "Transaction ID associated with the laboratory",
+                                        "type": "integer",
+                                        "example": 1
                                     }
                                 },
                                 "type": "object"
@@ -834,20 +817,86 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Laboratory statuses updated successfully",
+                        "description": "Laboratory status updated successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Laboratory status under this transaction updated successfully."
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 10
+                                                },
+                                                "transaction_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "status": {
+                                                    "type": "string",
+                                                    "example": "Returned"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2025-09-05T10:20:30.000000Z"
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2025-09-05T10:10:00.000000Z"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
                                     "type": "object"
                                 }
                             }
                         }
                     },
-                    "404": {
-                        "description": "No laboratories found for this transaction"
-                    },
                     "422": {
-                        "description": "Validation error"
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The given data was invalid."
+                                        },
+                                        "errors": {
+                                            "properties": {
+                                                "status": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The status field is required."
+                                                    }
+                                                },
+                                                "transaction_id": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The transaction id field is required."
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
